# haskell-algorithms

./: .gitignore  LICENSE  README.md  Setup.hs  default.nix  flake.nix  haskell-algorithms.cabal  hie.yaml  shell.nix
.github/workflows/: ci.yml
bench/: Bench.hs
nix/: sources.json
s/: haskell-language-server  hoogle  test
src/Algorithms/: MaximumSubArray.hs  Permutations.hs  Search.hs  Sequence.hs  Shuffle.hs  Sorting.hs  Utility.hs
src/Algorithms/Search/: Traversal.hs
src/Algorithms/ShortestPaths/: Dijkstra.hs
src/Algorithms/Sort/: InsertionSort.hs
src/Algorithms/Sorting/: CountingSort.hs  HeapSort.hs  InsertionSort.hs  MergeSort.hs  QuickSort.hs  Quicksort.hs  RadixSort.hs  Sort3.hs  Utility.hs
src/Algorithms/Sorting/Linear/: CountingSort.hs
src/Data/: Heap.hs
src/Data/Heap/: Fixed.hs  Generic.hs  Heap.hs  Intrusive.hs
src/Data/Heap/Fixed/: Intrusive.hs
src/Data/Heap/Intrusive/: Generic.hs
src/Data/Vector/: Growable.hs
src/Data/Vector/Growable/: Generic.hs  MVector.hs  Primitive.hs  Storable.hs  Unboxed.hs
test/: Doctest.hs
test/Algorithms/: MaximumSubArraySpec.hs  PermutationsSpec.hs  ShuffleSpec.hs  TestUtil.hs  UtilitySpec.hs
test/Algorithms/Heap/: VectorSpec.hs
test/Algorithms/Search/: TraversalSpec.hs
test/Algorithms/ShortestPaths/: DijkstraSpec.hs
test/Algorithms/Sort/: InsertionSortSpec.hs  TestUtil.hs
test/Algorithms/Sorting/: CountingSortSpec.hs  HeapSortSpec.hs  InsertionSortSpec.hs  MergeSortSpec.hs  QuickSortSpec.hs  QuicksortSpec.hs  RadixSortSpec.hs  Sort3Spec.hs  TestUtil.hs
test/Algorithms/Sorting/Linear/: CountingSortSpec.hs
test/Data/Heap/: HeapSpec.hs
test/Data/Vector/: GrowableSpec.hs
