cabal-version:      2.4
name:               haskell-algorithms
version:            0.1.0.0

synopsis: Efficient implementations of common data structures and algorithms.

description:
  This repository contains implementations of common data structures and algorithms,
  written in (hopefully) idiomatic Haskell. In order, the emphasis is on correctness,
  interpretability, and efficiency.

bug-reports: https://github.com/prsteele/haskell-algorithms/issues
license: MIT
author:             Patrick Steele
maintainer:         steele.pat@gmail.com

-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    Algorithms.MaximumSubArray
                    , Algorithms.Permutations
                    , Algorithms.Search
                    , Algorithms.Search.Traversal
                    , Algorithms.Sequence
                    , Algorithms.Shuffle
                    , Algorithms.Sorting
                    , Algorithms.Sorting.CountingSort
                    , Algorithms.Sorting.InsertionSort
                    , Algorithms.Sorting.MergeSort
                    , Algorithms.Sorting.Quicksort
                    , Algorithms.Sorting.RadixSort
                    , Algorithms.Sorting.Sort3
                    , Algorithms.Sorting.Utility
                    , Algorithms.Utility
  build-depends:      base ^>=4.15.1.0
                    , mtl
                    , containers
                    , random
                    , vector
                    , primitive
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , transformers

test-suite tests
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -with-rtsopts=-N -Wall
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Algorithms.PermutationsSpec
                    , Algorithms.MaximumSubArraySpec
                    , Algorithms.Sorting.CountingSortSpec
                    , Algorithms.Sorting.InsertionSortSpec
                    , Algorithms.Sorting.MergeSortSpec
                    , Algorithms.Sorting.QuicksortSpec
                    , Algorithms.Sorting.RadixSortSpec
                    , Algorithms.Sorting.Sort3Spec
                    , Algorithms.Sorting.TestUtil
                    , Algorithms.TestUtil
  build-depends:      base ^>=4.15.1.0
                    , QuickCheck
                    , containers
                    , haskell-algorithms
                    , HUnit
                    , hspec
                    , microlens
                    , vector

benchmark bench
  hs-source-dirs:     bench
  default-language:   Haskell2010
  ghc-options:        -threaded -with-rtsopts=-N -with-rtsopts=-T -Wall
  type:               exitcode-stdio-1.0
  main-is:            Bench.hs
  build-depends:      base ^>=4.15.1.0
                    , haskell-algorithms
                    , criterion
                    , deepseq
                    , random
                    , vector
