cabal-version:      2.4
name:               haskell-algorithms
version:            0.1.0.0

synopsis: Efficient implementations of common data structures and algorithms.

description:
  This repository contains implementations of common data structures and algorithms,
  written in (hopefully) idiomatic Haskell. In order, the emphasis is on correctness,
  interpretability, and efficiency.

bug-reports: https://github.com/prsteele/haskell-algorithms/issues
license:            MIT
author:             Patrick Steele
maintainer:         steele.pat@gmail.com

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        DeriveFunctor
      , DeriveGeneric
      , DeriveTraversable
      , DuplicateRecordFields
      , FlexibleContexts
      , FlexibleInstances
      , GeneralizedNewtypeDeriving
      , LambdaCase
      , MultiParamTypeClasses
      , NoFieldSelectors
      , OverloadedLabels
      , OverloadedStrings
      , OverloadedRecordDot
      , QuantifiedConstraints
      , Rank2Types
      , ScopedTypeVariables
      , TupleSections
      , TypeApplications
      , TypeFamilies

library
  import:             warnings
                    , extensions
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Algorithms.MaximumSubArray
                    , Algorithms.Permutations
                    , Algorithms.Sequence
                    , Algorithms.Shuffle
                    , Algorithms.Sorting
                    , Algorithms.Sorting.CountingSort
                    , Algorithms.Sorting.InsertionSort
                    , Algorithms.Sorting.MergeSort
                    , Algorithms.Sorting.Quicksort
                    , Algorithms.Sorting.RadixSort
                    , Algorithms.Sorting.Sort3
                    , Algorithms.Sorting.Utility
                    , Algorithms.Utility
                    , Data.Vector.Growable
                    , Data.Vector.Growable.Generic
  build-depends:      base >=4.16.4.0
                    , mtl
                    , random
                    , vector
                    , primitive
                    , microlens
                    , microlens-th
custom-setup
  setup-depends:
      base >=4.16.4.0
    , cabal-doctest
    , Cabal

test-suite doctests
  import:             warnings
                    , extensions
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Doctest.hs
  build-depends:      base >=4.16.4.0
                    , doctest
                    , ghc
                    , ghc-paths
                    , haskell-algorithms
                    , QuickCheck

test-suite tests
  import:             warnings
                    , extensions
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -with-rtsopts=-N
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Algorithms.PermutationsSpec
                    , Algorithms.MaximumSubArraySpec
                    , Algorithms.Sorting.CountingSortSpec
                    , Algorithms.Sorting.InsertionSortSpec
                    , Algorithms.Sorting.MergeSortSpec
                    , Algorithms.Sorting.QuicksortSpec
                    , Algorithms.Sorting.RadixSortSpec
                    , Algorithms.Sorting.Sort3Spec
                    , Algorithms.Sorting.TestUtil
                    , Algorithms.TestUtil
                    , Data.Vector.GrowableSpec
  build-depends:      base >=4.16.4.0
                    , QuickCheck
                    , haskell-algorithms
                    , HUnit
                    , hspec
                    , microlens
                    , mtl
                    , primitive
                    , vector

benchmark bench
  hs-source-dirs:     bench
  default-language:   Haskell2010
  ghc-options:        -threaded -with-rtsopts=-N -with-rtsopts=-T -Wall
  type:               exitcode-stdio-1.0
  main-is:            Bench.hs
  build-depends:      base >=4.16.4.0
                    , haskell-algorithms
                    , criterion
                    , deepseq
                    , random
                    , vector
